[package]
name = "libsensors-sys"
version = "0.3.0"
authors = ["nyantec GmbH <dev@nyantec.com>"]
edition = "2024"
license = "LGPL-2.1-or-later"
description = "Rust bindings to libsensors"
categories = ["external-ffi-bindings"]
links = "sensors"
repository = "https://github.com/nyantec/libsensors-sys"

[build-dependencies]
bindgen = "0.72"
